# trovo-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: main.yml
examples/: chat.rs
src/: auth.rs  client.rs  entities.rs  errors.rs  lib.rs
src/chat/: client.rs  entities.rs  error.rs  mod.rs  socket.rs
