[package]
name = "trovo"
version = "0.5.0"
edition = "2021"
description = "A trovo.live api & chat client written in and for rust"
authors = ["James Birtles <jamesb@airca.st>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["trovo", "api", "chat"]
categories = ["api-bindings", "asynchronous", "web-programming::websocket", "web-programming::http-client"]
repository = "https://github.com/AircastDev/trovo-rs"

[badges]
github = { repository = "AircastDev/trovo-rs" }

[features]
default = ["chat"]
chat = ["async-tungstenite", "tokio-util"]

[dependencies]
tokio = { version = "1", features = ["macros", "sync", "time"] }
futures = "0.3"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
serde_repr = "0.1"
chrono = "0.4"
serde_with = { version = "2", features = ["chrono"] }

# cfg(feature = "chat")
async-tungstenite = { version = "0.17", optional = true, features = ["tokio-runtime", "tokio-rustls-webpki-roots"] }
tokio-util = { version = "0.7", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
